[gd_scene load_steps=40 format=4 uid="uid://dgt4pp35mcbbn"]

[ext_resource type="Script" uid="uid://bcmp0bq8vi8bv" path="res://GUI/StartMenu/start_menu.gd" id="1_wh8gg"]
[ext_resource type="PackedScene" uid="uid://dfs1slgsvr2iv" path="res://Tilemap/tilemap.tscn" id="2_pqnxf"]
[ext_resource type="Texture2D" uid="uid://c6td52k2jnvbk" path="res://GUI/StartMenu/Sprites/D.png" id="9_7qmpk"]
[ext_resource type="Texture2D" uid="uid://behcsyvqm6txo" path="res://GUI/StartMenu/Sprites/O.png" id="10_amkdc"]
[ext_resource type="Script" uid="uid://bgu3xunx4bef" path="res://GUI/StartMenu/Scripts/title_letter.gd" id="10_mqs58"]
[ext_resource type="Texture2D" uid="uid://crng7nm73ogp6" path="res://GUI/StartMenu/Sprites/W.png" id="11_mqs58"]
[ext_resource type="Texture2D" uid="uid://dlumnyapswpuq" path="res://GUI/StartMenu/Sprites/N.png" id="12_mnmmo"]
[ext_resource type="Texture2D" uid="uid://rca0pgai3cvn" path="res://GUI/StartMenu/Sprites/F.png" id="13_wemol"]
[ext_resource type="Texture2D" uid="uid://cvgu2hl8nq76r" path="res://GUI/StartMenu/Sprites/A.png" id="14_0g5x1"]
[ext_resource type="Texture2D" uid="uid://c7s074msjl8r4" path="res://GUI/StartMenu/Sprites/L1.png" id="15_pqnxf"]
[ext_resource type="Texture2D" uid="uid://pulg1qtinmg8" path="res://GUI/StartMenu/Sprites/L2.png" id="16_7c8wi"]
[ext_resource type="Script" uid="uid://d3lb2soshcw3l" path="res://GUI/StartMenu/Scripts/title_shape.gd" id="18_0g5x1"]
[ext_resource type="Texture2D" uid="uid://45had24vye83" path="res://GUI/StartMenu/Sprites/StartCircle.png" id="18_wemol"]
[ext_resource type="Texture2D" uid="uid://bqgvfhdno1rkp" path="res://GUI/StartMenu/Sprites/StartTriangle.png" id="19_0g5x1"]
[ext_resource type="Texture2D" uid="uid://c8noi2roo2yap" path="res://GUI/StartMenu/Sprites/StartSquare.png" id="20_pqnxf"]

[sub_resource type="Animation" id="Animation_amkdc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TitleSprites/DSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(93, -200)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TitleSprites/DSprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.08726646]
}

[sub_resource type="Animation" id="Animation_7qmpk"]
resource_name = "d_drop"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TitleSprites/DSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(101, -76), Vector2(101, 128), Vector2(101, 108)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TitleSprites/DSprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.08726646, 0.0, -0.10471975511965978]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mqs58"]
_data = {
&"RESET": SubResource("Animation_amkdc"),
&"d_drop": SubResource("Animation_7qmpk")
}

[sub_resource type="Animation" id="Animation_mnmmo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(207, -200)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.61086524]
}

[sub_resource type="Animation" id="Animation_mqs58"]
resource_name = "o_drop"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.40000004, 0.90000004),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(208, -77), Vector2(208, 113), Vector2(208, 99)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.61086524, 0.0, 0.06981317007977318]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wemol"]
_data = {
&"RESET": SubResource("Animation_mnmmo"),
&"o_drop": SubResource("Animation_mqs58")
}

[sub_resource type="Animation" id="Animation_0g5x1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(312, -200)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_wemol"]
resource_name = "w_drop"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.40000004, 0.90000004),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(321, -80), Vector2(321, 163), Vector2(321, 126)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.08726646259971647, 0.0, 0.3141592653589793]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pqnxf"]
_data = {
&"RESET": SubResource("Animation_0g5x1"),
&"w_drop": SubResource("Animation_wemol")
}

[sub_resource type="Animation" id="Animation_7c8wi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(405, -200)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.08726646]
}

[sub_resource type="Animation" id="Animation_pqnxf"]
resource_name = "n_drop"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.40000004, 0.90000004),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(413, -84), Vector2(413, 219), Vector2(413, 165)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.08726646, 0.0, -0.17453292519943295]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vfxai"]
_data = {
&"RESET": SubResource("Animation_7c8wi"),
&"n_drop": SubResource("Animation_pqnxf")
}

[sub_resource type="Animation" id="Animation_bd883"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(555, -200)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.64751714]
}

[sub_resource type="Animation" id="Animation_pf0im"]
resource_name = "f_drop"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.90000004),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(537, -73), Vector2(537, 238), Vector2(537, 215)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.64751714, 0.0, 0.2617993877991494]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_thcn4"]
_data = {
&"RESET": SubResource("Animation_bd883"),
&"f_drop": SubResource("Animation_pf0im")
}

[sub_resource type="Animation" id="Animation_thcn4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(643, -200)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.25830874]
}

[sub_resource type="Animation" id="Animation_vfxai"]
resource_name = "a_drop"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.90000004),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(623, -85), Vector2(623, 320), Vector2(623, 273)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.25830874, 0.0, 0.13962634015954636]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_82ap0"]
_data = {
&"RESET": SubResource("Animation_thcn4"),
&"a_drop": SubResource("Animation_vfxai")
}

[sub_resource type="Animation" id="Animation_5hutp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(726, -200)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.38920844]
}

[sub_resource type="Animation" id="Animation_82ap0"]
resource_name = "l1_drop"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.90000004),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(733, -90), Vector2(733, 379), Vector2(733, 336)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.38920844, 0.0, -0.17453292519943295]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_586rv"]
_data = {
&"RESET": SubResource("Animation_5hutp"),
&"l1_drop": SubResource("Animation_82ap0")
}

[sub_resource type="Animation" id="Animation_p3avl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(814, -200)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.5550884]
}

[sub_resource type="Animation" id="Animation_586rv"]
resource_name = "l2_drop"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.90000004),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(812, -72), Vector2(812, 446), Vector2(812, 365)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-1.5550884, -0.8726646259971648, -0.5235987755982988]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tx5ha"]
_data = {
&"RESET": SubResource("Animation_p3avl"),
&"l2_drop": SubResource("Animation_586rv")
}

[node name="StartMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_wh8gg")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Tilemap" parent="." instance=ExtResource("2_pqnxf")]
tile_map_data = PackedByteArray("AAAAACcAAQAAAAAAAAAAACgAAQAAAAAAAAABACcAAQAAAAAAAAABACgAAQAAAAAAAAACACcAAQAAAAAAAAACACgAAQAAAAAAAAADACcAAQAAAAAAAAADACgAAQAAAAAAAAAEACcAAQAAAAAAAAAEACgAAQAAAAAAAAAFACcAAQAAAAAAAAAFACgAAQAAAAAAAAAGACcAAQAAAAAAAAAGACgAAQAAAAAAAAAHACcAAQAAAAAAAAAHACgAAQAAAAAAAAAIACcAAQAAAAAAAAAIACgAAQAAAAAAAAAJACcAAQAAAAAAAAAJACgAAQAAAAAAAAAKACcAAQAAAAAAAAAKACgAAQAAAAAAAAALACcAAQAAAAAAAAALACgAAQAAAAAAAAAMACcAAQAAAAAAAAAMACgAAQAAAAAAAAANACcAAQAAAAAAAAANACgAAQAAAAAAAAAOACcAAQAAAAAAAAAOACgAAQAAAAAAAAAPACcAAQAAAAAAAAAPACgAAQAAAAAAAAAQACcAAQAAAAAAAAAQACgAAQAAAAAAAAARACcAAQAAAAAAAAARACgAAQAAAAAAAAASACcAAQAAAAAAAAASACgAAQAAAAAAAAATACcAAQAAAAAAAAATACgAAQAAAAAAAAAUACcAAQAAAAAAAAAUACgAAQAAAAAAAAAVACcAAQAAAAAAAAAVACgAAQAAAAAAAAAWACcAAQAAAAAAAAAWACgAAQAAAAAAAAAXACcAAQAAAAAAAAAXACgAAQAAAAAAAAAYACcAAQAAAAAAAAAYACgAAQAAAAAAAAAZACcAAQAAAAAAAAAZACgAAQAAAAAAAAAaACcAAQAAAAAAAAAaACgAAQAAAAAAAAAbACcAAQAAAAAAAAAbACgAAQAAAAAAAAAcACcAAQAAAAAAAAAcACgAAQAAAAAAAAAdACcAAQAAAAAAAAAdACgAAQAAAAAAAAAeACcAAQAAAAAAAAAeACgAAQAAAAAAAAAfACcAAQAAAAAAAAAfACgAAQAAAAAAAAAgACcAAQAAAAAAAAAgACgAAQAAAAAAAAAhACcAAQAAAAAAAAAhACgAAQAAAAAAAAAiACcAAQAAAAAAAAAiACgAAQAAAAAAAAAjACcAAQAAAAAAAAAjACgAAQAAAAAAAAAkACcAAQAAAAAAAAAkACgAAQAAAAAAAAAlACcAAQAAAAAAAAAlACgAAQAAAAAAAAAmACcAAQAAAAAAAAAmACgAAQAAAAAAAAAnACcAAQAAAAAAAAAnACgAAQAAAAAAAAAoACcAAQAAAAAAAAAoACgAAQAAAAAAAAApACcAAQAAAAAAAAApACgAAQAAAAAAAAAqACcAAQAAAAAAAAAqACgAAQAAAAAAAAArACcAAQAAAAAAAAArACgAAQAAAAAAAAAsACcAAQAAAAAAAAAsACgAAQAAAAAAAAAtACcAAQAAAAAAAAAtACgAAQAAAAAAAAAuACcAAQAAAAAAAAAuACgAAQAAAAAAAAAvACcAAQAAAAAAAAAvACgAAQAAAAAAAAAwACcAAQAAAAAAAAAwACgAAQAAAAAAAAAxACcAAQAAAAAAAAAxACgAAQAAAAAAAAAyACcAAQAAAAAAAAAyACgAAQAAAAAAAAAzACcAAQAAAAAAAAAzACgAAQAAAAAAAAA0ACcAAQAAAAAAAAA0ACgAAQAAAAAAAAA1ACcAAQAAAAAAAAA1ACgAAQAAAAAAAAA2ACcAAQAAAAAAAAA2ACgAAQAAAAAAAAA3ACcAAQAAAAAAAAA3ACgAAQAAAAAAAAA4ACcAAQAAAAAAAAA4ACgAAQAAAAAAAAA5ACcAAQAAAAAAAAA5ACgAAQAAAAAAAAA6ACcAAQAAAAAAAAA6ACgAAQAAAAAAAAA7ACcAAQAAAAAAAAA7ACgAAQAAAAAAAAA8ACcAAQAAAAAAAAA8ACgAAQAAAAAAAAA9ACcAAQAAAAAAAAA9ACgAAQAAAAAAAAA+ACcAAQAAAAAAAAA+ACgAAQAAAAAAAAA/ACcAAQAAAAAAAAA/ACgAAQAAAAAAAABAACcAAQAAAAAAAABAACgAAQAAAAAAAABBACcAAQAAAAAAAABBACgAAQAAAAAAAABCACcAAQAAAAAAAABCACgAAQAAAAAAAABDACcAAQAAAAAAAABDACgAAQAAAAAAAABEACcAAQAAAAAAAABEACgAAQAAAAAAAABFACcAAQAAAAAAAABFACgAAQAAAAAAAABGACcAAQAAAAAAAABGACgAAQAAAAAAAABHACcAAQAAAAAAAABHACgAAQAAAAAAAAAAABEAAQAAAAAAAAAAABIAAQAAAAAAAAAAABMAAQAAAAAAAAAAABQAAQAAAAAAAAAAABUAAQAAAAAAAAAAABYAAQAAAAAAAAAAABcAAQAAAAAAAAAAABgAAQAAAAAAAAAAABkAAQAAAAAAAAAAABoAAQAAAAAAAAAAABsAAQAAAAAAAAAAABwAAQAAAAAAAAAAAB0AAQAAAAAAAAAAAB4AAQAAAAAAAAAAAB8AAQAAAAAAAAAAACAAAQAAAAAAAAAAACEAAQAAAAAAAAAAACIAAQAAAAAAAAAAACMAAQAAAAAAAAAAACQAAQAAAAAAAAAAACUAAQAAAAAAAAAAACYAAQAAAAAAAAABABEAAQAAAAAAAAABABIAAQAAAAAAAAABABMAAQAAAAAAAAABABQAAQAAAAAAAAABABUAAQAAAAAAAAABABYAAQAAAAAAAAABABcAAQAAAAAAAAABABgAAQAAAAAAAAABABkAAQAAAAAAAAABABoAAQAAAAAAAAABABsAAQAAAAAAAAABABwAAQAAAAAAAAABAB0AAQAAAAAAAAABAB4AAQAAAAAAAAABAB8AAQAAAAAAAAABACAAAQAAAAAAAAABACEAAQAAAAAAAAABACIAAQAAAAAAAAABACMAAQAAAAAAAAABACQAAQAAAAAAAAABACUAAQAAAAAAAAABACYAAQAAAAAAAAACABEAAQAAAAAAAAACABIAAQAAAAAAAAACABMAAQAAAAAAAAACABQAAQAAAAAAAAACABUAAQAAAAAAAAACABYAAQAAAAAAAAACABcAAQAAAAAAAAACABgAAQAAAAAAAAACABkAAQAAAAAAAAACABoAAQAAAAAAAAACABsAAQAAAAAAAAACABwAAQAAAAAAAAACAB0AAQAAAAAAAAACAB4AAQAAAAAAAAACAB8AAQAAAAAAAAACACAAAQAAAAAAAAACACEAAQAAAAAAAAACACIAAQAAAAAAAAACACMAAQAAAAAAAAACACQAAQAAAAAAAAACACUAAQAAAAAAAAACACYAAQAAAAAAAAADABEAAQAAAAAAAAADABIAAQAAAAAAAAADABMAAQAAAAAAAAADABQAAQAAAAAAAAADABUAAQAAAAAAAAADABYAAQAAAAAAAAADABcAAQAAAAAAAAADABgAAQAAAAAAAAADABkAAQAAAAAAAAADABoAAQAAAAAAAAADABsAAQAAAAAAAAADABwAAQAAAAAAAAADAB0AAQAAAAAAAAADAB4AAQAAAAAAAAADAB8AAQAAAAAAAAADACAAAQAAAAAAAAADACEAAQAAAAAAAAADACIAAQAAAAAAAAADACMAAQAAAAAAAAADACQAAQAAAAAAAAADACUAAQAAAAAAAAADACYAAQAAAAAAAAAEABEAAQAAAAAAAAAEABIAAQAAAAAAAAAEABMAAQAAAAAAAAAEABQAAQAAAAAAAAAEABUAAQAAAAAAAAAEABYAAQAAAAAAAAAEABcAAQAAAAAAAAAEABgAAQAAAAAAAAAEABkAAQAAAAAAAAAEABoAAQAAAAAAAAAEABsAAQAAAAAAAAAEABwAAQAAAAAAAAAEAB0AAQAAAAAAAAAEAB4AAQAAAAAAAAAEAB8AAQAAAAAAAAAEACAAAQAAAAAAAAAEACEAAQAAAAAAAAAEACIAAQAAAAAAAAAEACMAAQAAAAAAAAAEACQAAQAAAAAAAAAEACUAAQAAAAAAAAAEACYAAQAAAAAAAAAFABEAAQAAAAAAAAAFABIAAQAAAAAAAAAFABMAAQAAAAAAAAAFABQAAQAAAAAAAAAFABUAAQAAAAAAAAAFABYAAQAAAAAAAAAFABcAAQAAAAAAAAAFABgAAQAAAAAAAAAFABkAAQAAAAAAAAAFABoAAQAAAAAAAAAFABsAAQAAAAAAAAAFABwAAQAAAAAAAAAFAB0AAQAAAAAAAAAFAB4AAQAAAAAAAAAFAB8AAQAAAAAAAAAFACAAAQAAAAAAAAAFACEAAQAAAAAAAAAFACIAAQAAAAAAAAAFACMAAQAAAAAAAAAFACQAAQAAAAAAAAAFACUAAQAAAAAAAAAFACYAAQAAAAAAAAAGABEAAQAAAAAAAAAGABIAAQAAAAAAAAAGABMAAQAAAAAAAAAGABQAAQAAAAAAAAAGABUAAQAAAAAAAAAGABYAAQAAAAAAAAAGABcAAQAAAAAAAAAGABgAAQAAAAAAAAAGABkAAQAAAAAAAAAGABoAAQAAAAAAAAAGABsAAQAAAAAAAAAGABwAAQAAAAAAAAAGAB0AAQAAAAAAAAAGAB4AAQAAAAAAAAAGAB8AAQAAAAAAAAAGACAAAQAAAAAAAAAGACEAAQAAAAAAAAAGACIAAQAAAAAAAAAGACMAAQAAAAAAAAAGACQAAQAAAAAAAAAGACUAAQAAAAAAAAAGACYAAQAAAAAAAAAHABEAAQAAAAAAAAAHABIAAQAAAAAAAAAHABMAAQAAAAAAAAAHABQAAQAAAAAAAAAHABUAAQAAAAAAAAAHABYAAQAAAAAAAAAHABcAAQAAAAAAAAAHABgAAQAAAAAAAAAHABkAAQAAAAAAAAAHABoAAQAAAAAAAAAHABsAAQAAAAAAAAAHABwAAQAAAAAAAAAHAB0AAQAAAAAAAAAHAB4AAQAAAAAAAAAHAB8AAQAAAAAAAAAHACAAAQAAAAAAAAAHACEAAQAAAAAAAAAHACIAAQAAAAAAAAAHACMAAQAAAAAAAAAHACQAAQAAAAAAAAAHACUAAQAAAAAAAAAHACYAAQAAAAAAAAAIABEAAQAAAAAAAAAIABIAAQAAAAAAAAAIABMAAQAAAAAAAAAIABQAAQAAAAAAAAAIABUAAQAAAAAAAAAIABYAAQAAAAAAAAAIABcAAQAAAAAAAAAIABgAAQAAAAAAAAAIABkAAQAAAAAAAAAIABoAAQAAAAAAAAAIABsAAQAAAAAAAAAIABwAAQAAAAAAAAAIAB0AAQAAAAAAAAAIAB4AAQAAAAAAAAAIAB8AAQAAAAAAAAAIACAAAQAAAAAAAAAIACEAAQAAAAAAAAAIACIAAQAAAAAAAAAIACMAAQAAAAAAAAAIACQAAQAAAAAAAAAIACUAAQAAAAAAAAAIACYAAQAAAAAAAAAJABEAAQAAAAAAAAAJABIAAQAAAAAAAAAJABMAAQAAAAAAAAAJABQAAQAAAAAAAAAJABUAAQAAAAAAAAAJABYAAQAAAAAAAAAJABcAAQAAAAAAAAAJABgAAQAAAAAAAAAJABkAAQAAAAAAAAAJABoAAQAAAAAAAAAJABsAAQAAAAAAAAAJABwAAQAAAAAAAAAJAB0AAQAAAAAAAAAJAB4AAQAAAAAAAAAJAB8AAQAAAAAAAAAJACAAAQAAAAAAAAAJACEAAQAAAAAAAAAJACIAAQAAAAAAAAAJACMAAQAAAAAAAAAJACQAAQAAAAAAAAAJACUAAQAAAAAAAAAJACYAAQAAAAAAAAAKABEAAQAAAAAAAAAKABIAAQAAAAAAAAAKABMAAQAAAAAAAAAKABQAAQAAAAAAAAAKABUAAQAAAAAAAAAKABYAAQAAAAAAAAAKABcAAQAAAAAAAAAKABgAAQAAAAAAAAAKABkAAQAAAAAAAAAKABoAAQAAAAAAAAAKABsAAQAAAAAAAAAKABwAAQAAAAAAAAAKAB0AAQAAAAAAAAAKAB4AAQAAAAAAAAAKAB8AAQAAAAAAAAAKACAAAQAAAAAAAAAKACEAAQAAAAAAAAAKACIAAQAAAAAAAAAKACMAAQAAAAAAAAAKACQAAQAAAAAAAAAKACUAAQAAAAAAAAAKACYAAQAAAAAAAAA=")
collision_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 198.0
offset_top = 321.0
offset_right = 861.0
offset_bottom = 609.0
theme_override_constants/separation = 30

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="ButtonStart" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Start"

[node name="ButtonLoad" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Load Level"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 30

[node name="ButtonEmpty" type="Button" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
disabled = true
flat = true

[node name="ButtonCreator" type="Button" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
text = "Level Creator"

[node name="ButtonReset" type="Button" parent="."]
modulate = Color(1, 0, 0, 1)
offset_left = 890.0
offset_top = 21.0
offset_right = 1132.0322
offset_bottom = 82.0
text = "Reset Progress"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect2" type="ColorRect" parent="VBoxContainer2"]
z_index = 8
layout_mode = 2
size_flags_vertical = 3
color = Color(0.12955844, 0.12955847, 0.12955844, 1)

[node name="TitleSprites" type="Sprite2D" parent="."]

[node name="DSprite" type="Sprite2D" parent="TitleSprites"]
z_index = 7
position = Vector2(93, -200)
rotation = 0.08726646
scale = Vector2(8.5, 8.5)
texture = ExtResource("9_7qmpk")
script = ExtResource("10_mqs58")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TitleSprites/DSprite"]
root_node = NodePath("../../..")
libraries = {
&"": SubResource("AnimationLibrary_mqs58")
}

[node name="OSprite" type="Sprite2D" parent="TitleSprites"]
z_index = 4
position = Vector2(207, -200)
rotation = -0.61086524
scale = Vector2(8.5, 8.5)
texture = ExtResource("10_amkdc")
script = ExtResource("10_mqs58")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TitleSprites/OSprite"]
libraries = {
&"": SubResource("AnimationLibrary_wemol")
}

[node name="WSprite" type="Sprite2D" parent="TitleSprites"]
z_index = 5
position = Vector2(312, -200)
scale = Vector2(8.5, 8.5)
texture = ExtResource("11_mqs58")
script = ExtResource("10_mqs58")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TitleSprites/WSprite"]
libraries = {
&"": SubResource("AnimationLibrary_pqnxf")
}

[node name="NSprite" type="Sprite2D" parent="TitleSprites"]
z_index = 6
position = Vector2(405, -200)
rotation = 0.08726646
scale = Vector2(8.5, 8.5)
texture = ExtResource("12_mnmmo")
script = ExtResource("10_mqs58")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TitleSprites/NSprite"]
libraries = {
&"": SubResource("AnimationLibrary_vfxai")
}

[node name="FSprite" type="Sprite2D" parent="TitleSprites"]
z_index = 7
position = Vector2(555, -200)
rotation = 0.64751714
scale = Vector2(8.5, 8.5)
texture = ExtResource("13_wemol")
script = ExtResource("10_mqs58")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TitleSprites/FSprite"]
libraries = {
&"": SubResource("AnimationLibrary_thcn4")
}

[node name="ASprite" type="Sprite2D" parent="TitleSprites"]
z_index = 6
position = Vector2(643, -200)
rotation = -0.25830874
scale = Vector2(8.5, 8.5)
texture = ExtResource("14_0g5x1")
script = ExtResource("10_mqs58")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TitleSprites/ASprite"]
libraries = {
&"": SubResource("AnimationLibrary_82ap0")
}

[node name="L1Sprite" type="Sprite2D" parent="TitleSprites"]
z_index = 7
position = Vector2(726, -200)
rotation = -0.38920844
scale = Vector2(8.5, 8.5)
texture = ExtResource("15_pqnxf")
script = ExtResource("10_mqs58")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TitleSprites/L1Sprite"]
libraries = {
&"": SubResource("AnimationLibrary_586rv")
}

[node name="L2Sprite" type="Sprite2D" parent="TitleSprites"]
z_index = 6
position = Vector2(814, -200)
rotation = -1.5550884
scale = Vector2(8.5, 8.5)
texture = ExtResource("16_7c8wi")
script = ExtResource("10_mqs58")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TitleSprites/L2Sprite"]
libraries = {
&"": SubResource("AnimationLibrary_tx5ha")
}

[node name="SquareNode" type="Node2D" parent="TitleSprites"]
position = Vector2(980, 628)
script = ExtResource("18_0g5x1")

[node name="SquareSprite" type="Sprite2D" parent="TitleSprites/SquareNode"]
z_index = 1
position = Vector2(73, -90)
texture = ExtResource("20_pqnxf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TitleSprites/SquareNode/SquareSprite"]

[node name="TriangleNode" type="Node2D" parent="TitleSprites/SquareNode"]
position = Vector2(-18, -175)
script = ExtResource("18_0g5x1")

[node name="TriangleSprite" type="Sprite2D" parent="TitleSprites/SquareNode/TriangleNode"]
z_index = 2
position = Vector2(21, -101)
texture = ExtResource("19_0g5x1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TitleSprites/SquareNode/TriangleNode/TriangleSprite"]

[node name="CircleNode" type="Node2D" parent="TitleSprites/SquareNode/TriangleNode"]
position = Vector2(-52, -191)
script = ExtResource("18_0g5x1")

[node name="CircleSprite" type="Sprite2D" parent="TitleSprites/SquareNode/TriangleNode/CircleNode"]
z_index = 3
position = Vector2(-78, -80)
texture = ExtResource("18_wemol")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TitleSprites/SquareNode/TriangleNode/CircleNode/CircleSprite"]
